fix: prevent scrollbars

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,6 +1,8 @@
 .table {
   width: 100%;
+  box-sizing: border-box;
   margin: 10px 0px;
+  padding: 10px;
   border: 1px solid black;
 }
 
